--- a/spa-lab-src/angular.json
+++ b/spa-lab-src/angular.json
@@ -25,6 +25,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
